added a more sophisticaed game of guessing images

--- a/onmouseover.html
+++ b/onmouseover.html
@@ -20,10 +20,10 @@
     margin: auto;
     }
   </style>
-  <script type="text/javascript" charset="utf-8" src="blurryImages.js"></script>
+  <script type="text/javascript" charset="utf-8" src="onmouseover.js"></script>
 </head>
 <body>
-  <h1>Click the image to find the secret!</h1>
+  <h1>Move the mouse over to find the secret!</h1>
   <img id="zero" src="zeroblur.jpg" />
   <img id="one" src="oneblur.jpg">
   <img id="two" src="twoblur.jpg">
@@ -32,3 +32,4 @@
   <img id="five" src="fiveblur.jpg">
 </body>
 </html>
+
